# python_bookstore

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
src/bookstore/: __init__.py  __main__.py  main.py
src/bookstore/database/: __init__.py  connection.py
src/bookstore/models/: __init__.py  book.py
src/bookstore/repositories/: __init__.py  book_repository.py
tests/: conftest.py  test_book.py  test_book_repository.py
